# typedb-protocol

./: .bazelrc  .gitignore  BUILD  BZLMOD_MIGRATION_PLAN.md  BZLMOD_MIGRATION_STATUS.md  LICENSE  MODULE.bazel  README.md  RELEASE_NOTES_LATEST.md  RELEASE_TEMPLATE.md  VERSION  WORKSPACE  deployment.bzl  deployment.properties  package-lock.json  package.json  python_proto.py
.circleci/: config.yml
.factory/: automation.yml
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: BUG_REPORT.md
.grabl/: automation.yml
cluster/: BUILD  cluster_client.proto  cluster_database.proto  cluster_server.proto  cluster_service.proto  cluster_user.proto  cluster_user_token.proto
common/: BUILD  answer.proto  client.proto  concept.proto  connection.proto  logic.proto  options.proto  query.proto  session.proto  transaction.proto  version.proto
core/: BUILD  core_database.proto  core_service.proto
dependencies/: maven.bzl
dependencies/graknlabs/: BUILD  dependencies.bzl  repositories.bzl
dependencies/ide/: BUILD  sync.sh
dependencies/maven/: BUILD  artifacts.bzl  artifacts.snapshot  dependencies.bzl  dependencies.yaml  update.sh
dependencies/maven/artifacts/io/grpc/: BUILD
dependencies/typedb/: repositories.bzl
dependencies/vaticle/: BUILD  repositories.bzl
grpc/java/: BUILD
grpc/nodejs/: BUILD  graknlabs-grpc-protocol.js  package-lock.json  package.json  pnpm-lock.yaml  protocol.json  rules.bzl  ts_grpc_compile.bzl  unpack_proto_archive.py
grpc/python/: BUILD  requirements.txt
grpc/rust/: BUILD  Cargo.toml  build.rs  lib.rs  main.rs
grpc/rust/compile/: BUILD  compile.rs  tonic_compile.bzl
keyspace/: BUILD  Keyspace.proto
kgms/: BUILD  console.proto
proto/: BUILD  analyze.proto  analyzed-conjunction.proto  answer.proto  authentication.proto  concept.proto  conjunction.proto  connection.proto  database.proto  error.proto  logic.proto  migration.proto  options.proto  query-structure.proto  query.proto  raft-peering-service.proto  raft-peering.proto  server.proto  service.proto  session.proto  structure.proto  transaction.proto  typedb-service.proto  typedb_service.proto  user.proto  version.proto
proto/raft_service/: BUILD  raft_service.proto  replication.proto  replication_v2.proto  request.proto
proto/typedb_clustering_service/: BUILD  typedb_clustering.proto  typedb_clustering_service.proto
proto/typedb_service/: BUILD  analyze.proto  analyzed-conjunction.proto  answer.proto  concept.proto  connection.proto  database.proto  error.proto  migration.proto  query.proto  server.proto  transaction.proto  typedb_service.proto  user.proto
protobuf/: BUILD  answer.proto  concept.proto  database.proto  grakn.proto  logic.proto  options.proto  query.proto  session.proto  thing.proto  transaction.proto  type.proto
protobuf/cluster/: BUILD  cluster.proto  database.proto  discovery.proto  grakn-cluster.proto  grakn_cluster.proto  session.proto
service/: BUILD  service.proto
session/: Answer.proto  BUILD  Concept.proto  Session.proto
tool/release/: create_notes.sh
