# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this
# file, You can obtain one at https://mozilla.org/MPL/2.0/.

module(
    name = "typedb_protocol",
    version = "0.0.0",
    compatibility_level = 1,
)

# ===========================================================
# Common
# ===========================================================

bazel_dep(name = "bazel_skylib", version = "1.7.1")
bazel_dep(name = "rules_pkg", version = "1.0.1")

# ===========================================================
# Languages
# ===========================================================

# Rust
bazel_dep(name = "rules_rust", version = "0.56.0")
# Backport a bug fix from rules_rust 0.58 (bazelbuild/rules_rust#3251)
git_override(
    module_name = "rules_rust",
    remote = "https://github.com/bazelbuild/rules_rust",
    tag = "0.56.0",
    patches = ["@@typedb_dependencies+//patches:rules_rust.patch"],
)

rust = use_extension("@rules_rust//rust:extensions.bzl", "rust")
rust.toolchain(
    edition = "2024",
    versions = ["1.93.0"],
)
use_repo(rust, "rust_toolchains")
register_toolchains("@rust_toolchains//:all")

rust_host_tools = use_extension("@rules_rust//rust:extensions.bzl", "rust_host_tools")
rust_host_tools.host_tools(version = "1.93.0")

# Node.js / TypeScript
bazel_dep(name = "rules_nodejs", version = "6.3.2")
bazel_dep(name = "aspect_rules_js", version = "2.1.2")
bazel_dep(name = "aspect_rules_ts", version = "3.4.0")
node = use_extension("@rules_nodejs//nodejs:extensions.bzl", "node")
node.toolchain(
    name = "nodejs",
    node_version = "17.9.1",
)
use_repo(node, "nodejs")

# ===========================================================
# Protobuf & gRPC dependencies
# ===========================================================

bazel_dep(name = "rules_proto", version = "7.1.0")
bazel_dep(name = "protobuf", version = "29.3", repo_name = "com_google_protobuf")
bazel_dep(name = "grpc", version = "1.69.0")
bazel_dep(name = "rules_proto_grpc", version = "5.0.1")
bazel_dep(name = "rules_proto_grpc_java", version = "5.0.1")

# ===========================================================
# Package managers
# ===========================================================

# Rust crates
crate = use_extension("@rules_rust//crate_universe:extensions.bzl", "crate")
use_repo(crate, "crates")

# NPM
npm = use_extension("@aspect_rules_js//npm:extensions.bzl", "npm")
npm.npm_translate_lock(
    name = "typedb_protocol_npm",
    bins = {
        "protoc-gen-ts": ["protoc-gen-ts-js=./bin/protoc-gen-ts.js"],
    },
    pnpm_lock = "//grpc/nodejs:pnpm-lock.yaml",
)
use_repo(npm, "typedb_protocol_npm")

# TypeScript
rules_ts_ext = use_extension("@aspect_rules_ts//ts:extensions.bzl", "ext")
rules_ts_ext.deps(
    ts_version_from = "//grpc/nodejs:package.json",
)
use_repo(rules_ts_ext, "npm_typescript")

# Maven
bazel_dep(name = "rules_jvm_external", version = "6.6")
maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
maven.install(
    name = "protocol_maven",
    artifacts = [
        "com.google.guava:guava:30.1-jre",
        "com.google.protobuf:protobuf-java:3.21.7",
        "io.grpc:grpc-api:1.50.1",
        "io.grpc:grpc-core:1.50.1",
        "io.grpc:grpc-protobuf:1.50.1",
        "io.grpc:grpc-stub:1.50.1",
        "javax.annotation:javax.annotation-api:1.3.2",
    ],
    repositories = [
        "https://repo1.maven.org/maven2",
    ],
    strict_visibility = True,
)
use_repo(maven, "protocol_maven")

# ===========================================================
# TypeDB repos
# ===========================================================

bazel_dep(name = "typedb_dependencies", version = "0.0.0")
git_override(
    module_name = "typedb_dependencies",
    remote = "https://github.com/typedb/dependencies",
    commit = "383195b3003c0a51afb1defb20cb74d0f3fd6153",
)

bazel_dep(name = "typedb_bazel_distribution", version = "0.0.0")
git_override(
    module_name = "typedb_bazel_distribution",
    remote = "https://github.com/typedb/bazel-distribution",
    commit = "1b2556e6cdf0ac839b3e64ee55986e1a592b8b97",
)
